# RePlection

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  architecture-diagram.html  cloudbuild.yaml  pyproject.toml  start.ps1
companion/: index.html  package-lock.json  package.json  vite.config.ts
companion/src/: main.ts  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: main.rs
sidecar/: main.py  models.py  pipeline.py  realtime_engine.py  replay_controller.py  riot_api.py
tests/: test_main.py  test_pipeline.py  test_realtime_engine.py  test_replay_controller.py
