[project]
name = "gemini-live"
version = "0.1.0"
description = "AI friend that watches your League of Legends replays with you — powered by Gemini Live API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
